force-app/main/default/objects/Form_LCF_EOI_1__c/Form_LCF_EOI_1__c.object-meta.xml
<CustomObject>
    <description>LCF Expression of Interest Form - 1.0</description>
    <label>Form LCF EOI 1.0</label>
    <nameField>
        <displayFormat>EOI-{00000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form LCF EOI</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>