force-app/main/default/objects/Form_LCF_EOI_1__c/fields/application__c.field-meta.xml
<CustomField>
    <fullName>application__c</fullName>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Form LCF EOI 1.0</relationshipLabel>
    <relationshipName>Form_LCF_EOI_1_0</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>