force-app/main/default/objects/Form_LCF_EOI_1__c/fields/co_expected_percent_from_lcf__c.field-meta.xml
<CustomField>
    <fullName>co_expected_percent_from_lcf__c</fullName>
    <inlineHelpText>What percentage of the outcomes payments is going to be paid by the Life Chances Fund?</inlineHelpText>
    <label>CO - Expected Request from LCF %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>