force-app/main/default/objects/Form_LCF_EOI_1__c/fields/co_expected_request_from_lcf__c.field-meta.xml
<CustomField>
    <fullName>co_expected_request_from_lcf__c</fullName>
    <inlineHelpText>How much money is being requested from the Life Chances Fund for outcomes payments?</inlineHelpText>
    <label>CO - Expected Request from LCF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>