force-app/main/default/objects/Form_LCF_EOI_1__c/fields/co_intervention_cost_other_commissioners__c.field-meta.xml
<CustomField>
    <fullName>co_intervention_cost_other_commissioners__c</fullName>
    <inlineHelpText>For the other commissioners</inlineHelpText>
    <label>CO - Intervention Cost Other Commiss</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>