force-app/main/default/objects/Form_LCF_EOI_1__c/fields/co_intervention_saves_government__c.field-meta.xml
<CustomField>
    <fullName>co_intervention_saves_government__c</fullName>
    <inlineHelpText>For wider government</inlineHelpText>
    <label>CO - Intervention Savings Government</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>