force-app/main/default/objects/Form_LCF_EOI_1__c/fields/co_intervention_saves_lead_commissioner__c.field-meta.xml
<CustomField>
    <fullName>co_intervention_saves_lead_commissioner__c</fullName>
    <inlineHelpText>For the lead commissioner</inlineHelpText>
    <label>CO - Intervention Savings Lead Commiss</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>