force-app/main/default/objects/Form_LCF_EOI_1__c/fields/co_number_of_commissioners__c.field-meta.xml
<CustomField>
    <fullName>co_number_of_commissioners__c</fullName>
    <description>Count of commissioners for this expression of interest</description>
    <formula>application__r.EOI_Number_of_Commissioners__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of commissioners for this expression of interest</inlineHelpText>
    <label>CO - Number of Commissioners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>