force-app/main/default/objects/Form_LCF_EOI_1__c/fields/co_primary_commissioner__c.field-meta.xml
<CustomField>
    <fullName>co_primary_commissioner__c</fullName>
    <description>EOI Primary Commissioner</description>
    <formula>application__r.EOI_Primary_Commissioner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EOI Primary Commissioner</inlineHelpText>
    <label>CO - Primary Commissioner</label>
    <type>Text</type>
</CustomField>