force-app/main/default/objects/Form_LCF_EOI_1__c/fields/co_primary_commissioner_count__c.field-meta.xml
<CustomField>
    <fullName>co_primary_commissioner_count__c</fullName>
    <description>Count of EOI primary commissioners (should be 1)</description>
    <formula>application__r.EOI_Primary_Commissioner_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of EOI primary commissioners (should be 1)</inlineHelpText>
    <label>CO - Primary Commissioner Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>