force-app/main/default/objects/Form_LCF_EOI_1__c/fields/de_declaration__c.field-meta.xml
<CustomField>
    <fullName>de_declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I&#39;ve read and understood the declaration</inlineHelpText>
    <label>DE - Declaration</label>
    <type>Checkbox</type>
</CustomField>