force-app/main/default/objects/Form_LCF_EOI_1__c/fields/de_responsible_person__c.field-meta.xml
<CustomField>
    <fullName>de_responsible_person__c</fullName>
    <inlineHelpText>Name of the legally responsible person</inlineHelpText>
    <label>DE - Responsible Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>