force-app/main/default/objects/Form_LCF_EOI_1__c/fields/EOI_Key__c.field-meta.xml
<CustomField>
    <fullName>EOI_Key__c</fullName>
    <description>Key field for upserts (set equal to Name by a workflow)</description>
    <externalId>true</externalId>
    <inlineHelpText>Key field for upserts (set equal to Name by a workflow)</inlineHelpText>
    <label>EOI Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>