force-app/main/default/objects/Form_LCF_EOI_1__c/fields/Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Form_Complete__c</fullName>
    <formula>AND(
  ISPICKVAL(lc_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(or_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(pr_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(ou_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(rs_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(co_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(pa_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(de_section_status__c, &#39;COMPLETE&#39;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is form complete?</inlineHelpText>
    <label>Form Complete</label>
    <type>Checkbox</type>
</CustomField>