force-app/main/default/objects/Form_LCF_EOI_1__c/fields/lc_email__c.field-meta.xml
<CustomField>
    <fullName>lc_email__c</fullName>
    <inlineHelpText>What is the email address of the lead contact?</inlineHelpText>
    <label>LC - Email</label>
    <type>Email</type>
</CustomField>