force-app/main/default/objects/Form_LCF_EOI_1__c/fields/lc_first_name__c.field-meta.xml
<CustomField>
    <fullName>lc_first_name__c</fullName>
    <inlineHelpText>First name</inlineHelpText>
    <label>LC - First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>