force-app/main/default/objects/Form_LCF_EOI_1__c/fields/lc_last_name__c.field-meta.xml
<CustomField>
    <fullName>lc_last_name__c</fullName>
    <inlineHelpText>Last name</inlineHelpText>
    <label>LC - Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>