force-app/main/default/objects/Form_LCF_EOI_1__c/fields/lc_phone_number__c.field-meta.xml
<CustomField>
    <fullName>lc_phone_number__c</fullName>
    <inlineHelpText>What is the contact number of the lead contact?</inlineHelpText>
    <label>LC - Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>