force-app/main/default/objects/Form_LCF_EOI_1__c/fields/lc_position__c.field-meta.xml
<CustomField>
    <fullName>lc_position__c</fullName>
    <inlineHelpText>What is the position of the lead contact?</inlineHelpText>
    <label>LC - Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>