force-app/main/default/objects/Form_LCF_EOI_1__c/fields/or_expenditure_for_year__c.field-meta.xml
<CustomField>
    <fullName>or_expenditure_for_year__c</fullName>
    <inlineHelpText>Total expenditure for the year</inlineHelpText>
    <label>OR - Expenditure for Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>