force-app/main/default/objects/Form_LCF_EOI_1__c/fields/or_income_for_projected_year__c.field-meta.xml
<CustomField>
    <fullName>or_income_for_projected_year__c</fullName>
    <inlineHelpText>Total income for the projected year</inlineHelpText>
    <label>OR - Income for Projected Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>