force-app/main/default/objects/Form_LCF_EOI_1__c/fields/or_organisation_age__c.field-meta.xml
<CustomField>
    <fullName>or_organisation_age__c</fullName>
    <inlineHelpText>How long has the organisation been operating?</inlineHelpText>
    <label>OR - Organisation Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More than 15 months</fullName>
            </value>
            <value>
                <fullName>Less than 15 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>