force-app/main/default/objects/Form_LCF_EOI_1__c/fields/or_organisation_sector__c.field-meta.xml
<CustomField>
    <fullName>or_organisation_sector__c</fullName>
    <inlineHelpText>What sector does your organisation fit into?</inlineHelpText>
    <label>OR - Organisation Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector_of_Organisation</valueSetName>
    </valueSet>
</CustomField>