force-app/main/default/objects/Form_LCF_EOI_1__c/fields/or_organisation_type__c.field-meta.xml
<CustomField>
    <fullName>or_organisation_type__c</fullName>
    <inlineHelpText>Choose the organisation type that best fits your organisation</inlineHelpText>
    <label>OR - Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisation_Type</valueSetName>
    </valueSet>
</CustomField>