force-app/main/default/objects/Form_LCF_EOI_1__c/fields/or_projected_year_end__c.field-meta.xml
<CustomField>
    <fullName>or_projected_year_end__c</fullName>
    <description>For example, 31/03//2018</description>
    <inlineHelpText>When is the organisation&#39;s projected accounting year end?</inlineHelpText>
    <label>OR - Projected Year End</label>
    <type>Date</type>
</CustomField>