force-app/main/default/objects/Form_LCF_EOI_1__c/fields/or_savings_for_year__c.field-meta.xml
<CustomField>
    <fullName>or_savings_for_year__c</fullName>
    <inlineHelpText>Total savings or reserves at the year end</inlineHelpText>
    <label>OR - Savings for Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>