force-app/main/default/objects/Form_LCF_EOI_1__c/fields/or_surplus_for_projected_year__c.field-meta.xml
<CustomField>
    <fullName>or_surplus_for_projected_year__c</fullName>
    <inlineHelpText>Surplus or deficit at the projected year end</inlineHelpText>
    <label>OR - Surplus for Projected Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>