force-app/main/default/objects/Form_LCF_EOI_1__c/fields/or_surplus_for_year__c.field-meta.xml
<CustomField>
    <fullName>or_surplus_for_year__c</fullName>
    <inlineHelpText>Surplus or deficit for the year</inlineHelpText>
    <label>OR - Surplus for Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>