force-app/main/default/objects/Form_LCF_EOI_1__c/fields/ou_section_status__c.field-meta.xml
<CustomField>
    <fullName>ou_section_status__c</fullName>
    <inlineHelpText>Outcomes section status</inlineHelpText>
    <label>OU - Section Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Section_Status</valueSetName>
    </valueSet>
</CustomField>