force-app/main/default/objects/Form_LCF_EOI_1__c/fields/pa_number_of_previous_applications__c.field-meta.xml
<CustomField>
    <fullName>pa_number_of_previous_applications__c</fullName>
    <description>Count of previous applications</description>
    <formula>application__r.EOI_Number_of_Previous_Applications__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of previous applications</inlineHelpText>
    <label>PA - Number of Previous Applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>