force-app/main/default/objects/Form_LCF_EOI_1__c/fields/pa_previous_applications__c.field-meta.xml
<CustomField>
    <fullName>pa_previous_applications__c</fullName>
    <inlineHelpText>Have you previously applied to the Commissioning Better Outcomes or the Social Outcomes funds for the same project?</inlineHelpText>
    <label>PA - Previous Applications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>