force-app/main/default/objects/Form_LCF_EOI_1__c/fields/pr_other_social_issues__c.field-meta.xml
<CustomField>
    <fullName>pr_other_social_issues__c</fullName>
    <description>If a project spans multiple themes, select the additional themes that apply (otherwise select &#39;None&#39;). The team reviewing the application will decide if the project is in scope because of an innovative proposal.</description>
    <inlineHelpText>Apart from the theme selected, what other social issue would your project address?</inlineHelpText>
    <label>PR - Other Social Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Themes_Optional</valueSetName>
    </valueSet>
</CustomField>