force-app/main/default/objects/Form_LCF_EOI_1__c/fields/pr_project_end_date__c.field-meta.xml
<CustomField>
    <fullName>pr_project_end_date__c</fullName>
    <description>For example, 24/01/2019</description>
    <inlineHelpText>When would you like your project to finish?</inlineHelpText>
    <label>PR - Project End Date</label>
    <type>Date</type>
</CustomField>