force-app/main/default/objects/Form_LCF_EOI_1__c/fields/pr_project_name__c.field-meta.xml
<CustomField>
    <fullName>pr_project_name__c</fullName>
    <inlineHelpText>What is the name of your project?</inlineHelpText>
    <label>PR - Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>