force-app/main/default/objects/Form_LCF_EOI_1__c/fields/pr_project_region__c.field-meta.xml
<CustomField>
    <fullName>pr_project_region__c</fullName>
    <description>Please select either &#39;England wide&#39; or one or more regions of England</description>
    <inlineHelpText>Where will your project take place?</inlineHelpText>
    <label>PR - Project Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisation_Region</valueSetName>
    </valueSet>
</CustomField>