force-app/main/default/objects/Form_LCF_EOI_1__c/fields/pr_project_start_date__c.field-meta.xml
<CustomField>
    <fullName>pr_project_start_date__c</fullName>
    <description>For example, 24/01/2016</description>
    <inlineHelpText>When will your project start (or when did it start)?</inlineHelpText>
    <label>PR - Project Start Date</label>
    <type>Date</type>
</CustomField>