force-app/main/default/objects/Form_LCF_EOI_1__c/fields/pr_project_summary__c.field-meta.xml
<CustomField>
    <fullName>pr_project_summary__c</fullName>
    <description>Briefly outline your project, including the outcomes it will deliver, the target service users, and how the project fits with the chosen policy theme and relevant context. If known, outline your proposed intervention and the service provider who will deliver the service.</description>
    <inlineHelpText>Please provide a summary of your project and how it fits with the priorities for the Life Chances Fund.</inlineHelpText>
    <label>PR - Project Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>