force-app/main/default/objects/Form_LCF_EOI_1__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <formula>application__r.Reviewer__r.FirstName + &#39; &#39; +  application__r.Reviewer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reviewer</label>
    <type>Text</type>
</CustomField>