force-app/main/default/objects/Form_LCF_EOI_1__c/fields/rs_section_status__c.field-meta.xml
<CustomField>
    <fullName>rs_section_status__c</fullName>
    <inlineHelpText>Research section status</inlineHelpText>
    <label>RS - Section Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Section_Status</valueSetName>
    </valueSet>
</CustomField>