force-app/main/default/objects/Form_LCF_EOI_1__c/fields/rs_service_developments__c.field-meta.xml
<CustomField>
    <fullName>rs_service_developments__c</fullName>
    <description>Show how you have worked with your service users and other service providers (if any) to ensure effective intervention delivery. This could include evidence of research done with users or an engagement plan showing users? involvement in intervention design.</description>
    <inlineHelpText>Please outline what you have done/will do to develop your service to ensure it best supports service users?</inlineHelpText>
    <label>RS - Service Developments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>