force-app/main/default/objects/Form_LCF_EOI_1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>application__c</columns>
    <columns>Application_Contact__c</columns>
    <columns>Application_Contact_Organisation__c</columns>
    <columns>Form_Complete__c</columns>
    <columns>Status__c</columns>
    <columns>co_primary_commissioner__c</columns>
    <columns>pr_project_name__c</columns>
    <columns>pr_project_region__c</columns>
    <columns>co_number_of_commissioners__c</columns>
    <columns>ou_number_of_outcomes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>